ui: market maker ui

--- a/client/webserver/site/src/css/main.scss
+++ b/client/webserver/site/src/css/main.scss
@@ -422,6 +422,10 @@ div.popup-notes {
   border-radius: 3px;
 }
 
+.brdr {
+  border: 1px solid $light_border_color;
+}
+
 .brdrleft {
   border-left: 1px solid $light_border_color;
 }
