--- a/client/webserver/site/src/html/dexsettings.tmpl
+++ b/client/webserver/site/src/html/dexsettings.tmpl
@@ -3,6 +3,9 @@
 {{$passwordIsCached := .UserInfo.PasswordIsCached}}
 <div id="main" data-handler="dexsettings" data-host="{{.Exchange.Host}}" class="py-5 overflow-y-auto">
   <div class="d-flex align-items-stretch flex-column mw-425 mx-auto">
+    <div class="d-flex justify-content-start align-items-center pointer py-2">
+      <span id="goBackToSettings" class="ico-wide-headed-left-arrow fs24 lh1"></span>
+    </div>
     <div class="flex-center"><span class="settings-gear ico-settings"></span></div>
     <div class="flex-center fs28 text-break">{{.Exchange.Host}}</div>
     <div class="flex-center fs16 mb-2">
