--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -380,10 +380,8 @@
                   </div>
 
                   {{- /* ORDER LIMITS */ -}}
-                  <div id="orderLimitBox" class="mt-2 p-2 brdr">
-                    <span id="orderFormParcels">0</span> parcels
-                    of the <span id="orderParcelsRemain">0</span> unused parcels in your
-                    tier <span id="orderTradingTier">0</span> trading limit
+                  <div class="mt-2 p-2 text-center brdr fs17">
+                    [[[order_form_remaining_limit]]]
                   </div>
 
 
@@ -424,25 +422,25 @@
               </div>
 
               {{- /* REPUTATION */ -}}
-              <div class="d-flex align-items-stretch fs15 mx-2 brdr">
+              <div id="tradingLimits" class="d-flex align-items-stretch fs15 mx-2 brdr">
                 <div class="d-flex flex-column flex-grow-1 align-items-stretch px-2">
 
                   <div class="d-flex justify-content-between align-items-center">
-                    <span>Parcel Size</span>
+                    <span>[[[Parcel Size]]]</span>
                     <span>
-                      <span id="parcelSizeLots"></span> <span>lots</span>
+                      <span id="parcelSizeLots"></span> <span>[[[lots]]]</span>
                     </span>
                   </div>
 
                   <div class="d-flex justify-content-between align-items-center">
-                    <span><!-- Base --></span>
+                    <span><!-- Parcel Size Base --></span>
                     <span>
                       <span id="marketLimitBase"></span> <span id="marketLimitBaseUnit"></span>
                     </span>
                   </div>
 
                   <div class="d-flex justify-content-between align-items-center">
-                    <span><!-- Market Limit Quote --></span>
+                    <span><!-- Parcel Size Quote --></span>
                     <span>
                       ~<span id="marketLimitQuote"></span> <span id="marketLimitQuoteUnit"></span>
                     </span>
@@ -452,23 +450,23 @@
                 <div class="d-flex flex-column flex-grow-1 align-items-stretch px-2 brdrleft">
 
                   <div class="d-flex justify-content-between align-items-center">
-                    <span>Trading Tier</span>
+                    <span>[[[Trading Tier]]]</span>
                     <span id="tradingTier"></span>
                   </div>
 
                   <div class="d-flex justify-content-between align-items-center">
-                    <span>Trading Limit</span>
-                    <span><span id="tradingLimit"></span> parcels</span>
+                    <span>[[[Trading Limit]]]</span>
+                    <span><span id="tradingLimit"></span> lots</span>
                   </div>
 
                   <div class="d-flex justify-content-between align-items-center">
-                    <span>Current usage</span>
+                    <span>[[[Current Usage]]]</span>
                     <span><span id="limitUsage"></span>%</span>
                   </div>
                   
                 </div>
               </div>
-              <div id="reputationMeter" class="px-2 mt-2">
+              <div id="reputationMeter" class="px-2 mt-2 brdrbottom">
                 {{template "reputationMeter"}}
               </div>
 
