Display ERC20 contract address on wallet page

--- a/client/webserver/site/src/css/wallets.scss
+++ b/client/webserver/site/src/css/wallets.scss
@@ -198,6 +198,10 @@
       width: 18px;
       height: 18px;
     }
+
+    #contractAddress {
+      opacity: 0.4;
+    }
   }
 
   .peers-table-icon {
