--- a/client/webserver/site/src/html/wallets.tmpl
+++ b/client/webserver/site/src/html/wallets.tmpl
@@ -31,10 +31,13 @@
               <img id="assetLogo">
               <div class="ms-2 fs28 sans-light lh1" id="assetName" data-asset-name="1"></div>
             </div>
-            <div id="tokenParentBox" class="flex-center fs18 sans" class="fs16 d-hide">
-              <span>[[[Token on]]]</span>
-              <img id="tokenParentLogo" class="ms-1">
-              <span id="tokenParentName"></span>
+            <div id="tokenInfoBox" class="d-hide sans fs18">
+              <div class="flex-center">
+                <span>[[[Token on]]]</span>
+                <img id="tokenParentLogo" class="ms-1">
+                <span id="tokenParentName"></span>
+              </div>
+              <div id="contractAddress" class="fs14"></div>
             </div>
             <div id="createWalletBox" class="my-2">
               <button class="py-1 px-2 hoverbg fs18" id="createWallet">[[[create_a_x_wallet]]]</button>
