ui: Order submit button state management (#2534)
* Order submit button state disabled if insufficient balance

---------

Co-authored-by: martonp <marci93@gmail.com>

--- a/client/webserver/site/src/html/markets.tmpl
+++ b/client/webserver/site/src/html/markets.tmpl
@@ -376,7 +376,7 @@
 
                   {{- /* SUBMIT ORDER BUTTON */ -}}
                   <div class="text-end">
-                    <button id="submitBttn" type="button" class="my-1 fs14 submit text-center buygreen-bg"></button> {{/* textContent set by script */}}
+                    <button id="submitBttn" type="button" class="my-1 fs14 submit text-center buygreen-bg" disabled></button> {{/* textContent set by script */}}
                   </div>
                 </div>
                 <div class="fs15 pt-3 text-center d-hide errcolor text-break" id="orderErr"></div>
