--- a/client/webserver/site/src/css/market.scss
+++ b/client/webserver/site/src/css/market.scss
@@ -73,6 +73,10 @@ div[data-handler=markets] {
         padding: 5px 25px;
         border-radius: 3px;
         color: #555;
+
+        &:disabled {
+          opacity: 0.4;
+        }
       }
 
       button:hover,
