--- a/client/webserver/site/src/html/forms.tmpl
+++ b/client/webserver/site/src/html/forms.tmpl
@@ -228,6 +228,9 @@
 
 {{define "regAssetForm"}}
 <div data-tmpl="whatsABondPanel" class="d-hide">
+  <div data-tmpl="whatsABondBack" class="w-100 py-2 pointer hoverbg">
+    <span class="ico-wide-headed-left-arrow fs24"></span>
+  </div>
   <div class="flex-center fs22 mb-2">[[[What is a fidelity bond]]]</div>
   <ul class="fs16">
     <li>
