--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -36,7 +36,7 @@
         </div>
         <div class="col-12 flex-center flex-column mw-425 p-3 brdrleft">
           <span class="ico-robot mb-3"></span>
-          <button id="addBotBtn" class="p-2 selected rounded3">Add a Market Maker Bot</button>
+          <button id="addBotBtnNoExisting" class="p-2 selected rounded3">Add a Market Maker Bot</button>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
           </tr>
         </tbody>
         <tbody>
-          <tr id="addBotBtn2" class="hoverbg pointer">
+          <tr id="addBotBtnWithExisting" class="hoverbg pointer">
             <td colspan="9">
               <div class="flex-center p-2 fs20">
                 <span class="ico-plus me-2"></span>
