--- a/client/webserver/site/src/html/mmsettings.tmpl
+++ b/client/webserver/site/src/html/mmsettings.tmpl
@@ -16,7 +16,7 @@
   </div>
 
   <div id="botSettingsContainer" class="d-flex flex-wrap d-hide p-2">
-    <div class="col-24 col-xl-6 px-3">
+    <div class="col-24 col-xl-8 col-xxl-6 px-3">
       <div class="d-flex flex-column align-items-stretch pb-2">
         <div class="text-nowrap me-2 mb-1 fs18 demi">[[[gap_strategy]]]</div>
         <select id="gapStrategySelect" class="form-select fs18">
@@ -52,11 +52,15 @@
         which is the minimum spread at which a buy-sell combo produces profit.
       </div>
 
+      <button id="updateButton" class="d-block selected w-100 flex-center fs20 mt-2 p-2 hoverbg brdr pointer">[[[update_settings]]]</button>
+      <button id="createButton" class="d-block selected w-100 flex-center fs20 mt-2 p-2 hoverbg brdr pointer d-hide">[[[create_bot]]]</button>
+      <button id="resetButton" class="d-block selected w-100 flex-center fs20 mt-2 p-2 hoverbg brdr pointer">[[[reset_settings]]]</button>
+
       <div class="d-flex align-items-center fs18 mt-3 demi">
         [[[buy_placements]]]
         <span class="ico-info fs12 ms-1" data-tooltip="[[[buy_placements_tooltip]]]"></span>
       </div>
-      <div class="d-flex" id="buyPlacementsTableWrapper">
+      <div class="d-flex flex-column" id="buyPlacementsTableWrapper">
         <table class="placement-table">
           <thead>
             <th scope="col">[[[priority]]]</th>
@@ -100,7 +104,7 @@
         [[[sell_placements]]]
         <span class="ico-info fs12 ms-1" data-tooltip="[[[sell_placements_tooltip]]]"></span>
       </div>
-      <div class="d-flex" id="sellPlacementsTableWrapper">
+      <div class="d-flex flex-column" id="sellPlacementsTableWrapper">
         <table class="placement-table">
           <thead>
             <th scope="col">[[[priority]]]</th>
@@ -125,12 +129,9 @@
         </table>
         <span id="sellPlacementsErr" class="fs15 pt-3 text-center d-hide errcolor text-break"></span>
       </div>
-      <button id="updateButton" class="d-block selected w-100 flex-center fs20 mt-2 p-2 hoverbg brdr pointer">[[[update_settings]]]</button>
-      <button id="createButton" class="d-block selected w-100 flex-center fs20 mt-2 p-2 hoverbg brdr pointer d-hide">[[[create_bot]]]</button>
-      <button id="resetButton" class="d-block selected w-100 flex-center fs20 mt-2 p-2 hoverbg brdr pointer">[[[reset_settings]]]</button>
     </div>
 
-    <div class="col-24 col-xl-12 d-flex flex-wrap">
+    <div class="col-24 col-xl-10 col-xxl-12 d-flex flex-wrap">
       <div class="col-24 col-xxl-8 d-flex flex-column align-items-stretch">
         <div class="settings-card">
           <div class="fs18 mb-2">
@@ -157,9 +158,7 @@
             <div id="oracleBiasContainer" class="slider-container"></div>
           </div>
         </div>
-      </div>
 
-      <div class="col-24 col-xxl-8 d-flex flex-column align-items-stretch">
         <div class="settings-card">
           <label for="emptyMarketRateCheckbox" class="fs18 d-flex align-items-center w-100">
             <input type="checkbox" id="emptyMarketRateCheckbox" class="form-check-input me-2 mt-0" checked>
@@ -170,7 +169,9 @@
             <input type="number" class="p-2 mt-1" id="emptyMarketRateInput">
           </div>
         </div>
+      </div>
 
+      <div class="col-24 col-xxl-8 d-flex flex-column align-items-stretch">
         <div class="settings-card">
           <div class="fs18 d-flex align-items-center">
             <span><img id="baseBalanceLogo" class="micro-icon me-1"> [[[base_asset_balance]]]</span>
