internationalization and remove simnetfiatrates config setting and filtering

--- a/client/webserver/site/src/html/mm.tmpl
+++ b/client/webserver/site/src/html/mm.tmpl
@@ -7,8 +7,8 @@
         <div class="fs28 text-nowrap">[[[Market Making]]]</div>
         <div class="flex-center mt-1 fs20">
           <span id="onIndicator" class="off me-2"></span>
-          <span id="onMsg" class="d-hide">Running</span>
-          <span id="offMsg">Off</span>
+          <span id="onMsg" class="d-hide">[[[Running]]]</span>
+          <span id="offMsg">[[[Off]]]</span>
         </div>
       </div>
       <div class="flex-center p-3 brdrleft">
@@ -28,15 +28,12 @@
         <div class="col-12 d-flex flex-column align-items-stretch mw-425 p-2">
           <div class="fs28 flex-center text-nowrap brdrbottom">[[[Market Making]]]</div>
           <div class="p-2 text-justify fs15">
-            Add a market maker bot to make a market.
-            When you make a market, you strategically maintain orders on both sides of a market's order book.
-            In addition to potential profits, market makers improve the health
-            of a market by providing liquidity and limiting slippage.
+            [[[whats_a_market_maker]]]
           </div>
         </div>
         <div class="col-12 flex-center flex-column mw-425 p-3 brdrleft">
           <span class="ico-robot mb-3"></span>
-          <button id="addBotBtnNoExisting" class="p-2 selected rounded3">Add a Market Maker Bot</button>
+          <button id="addBotBtnNoExisting" class="p-2 selected rounded3">[[[Add a Market Maker Bot]]]</button>
         </div>
       </div>
     </div>
@@ -83,7 +80,7 @@
             <td colspan="9">
               <div class="flex-center p-2 fs20">
                 <span class="ico-plus me-2"></span>
-                Add another bot
+                [[[Add another bot]]]
               </div>
             </td>
           </tr>
