semi transparent layer under dialogs

--- a/client/webserver/site/src/css/forms.scss
+++ b/client/webserver/site/src/css/forms.scss
@@ -247,7 +247,7 @@ button.form-button {
   left: 0;
   right: 0;
   padding: 25px 0;
-  background-color: $light_body_bg;
+  background-color: #ecebf0e0;
   z-index: 100;
 
   & > form {
